fix hero image contrast, add blockquotes

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,14 +12,43 @@ body {
   color: #292929;
 }
 
+a {
+  color: #91aa9d;
+}
+
+a:visited {
+  color: #d1dbdd,
+}
+
 header {
   padding-top: 4.2em;
   padding-bottom: 1.8em;
-  background: url('https://culturebadger.files.wordpress.com/2013/05/mountains12.jpg');
+  background: radial-gradient(circle, rgba(0, 0, 0, .7) 20%, rgba(0, 0, 0, .5) 70%, transparent),
+              url('https://culturebadger.files.wordpress.com/2013/05/mountains12.jpg');
   background-size: cover;
-  background-position: center 40%; 
-  /*background: #292929;*/
-  color: #f0f0f0;
+  background-position: center 40%;
+  color: #d1dbdd;
+  text-align: center;
+}
+
+header h1,
+header p {
+  text-shadow: 0px 0px 10px rgba(0, 0, 0, .6);
+}
+
+.light {
+  color: #4a4a4a;
+}
+
+.avatar-img {
+  border-radius: 50%;
+  border: 3px solid #d1dbdd;
+  width: 75px;
+  height: 75px;
+}
+
+.author {
+  font-style: italic;
 }
 
 h1, h2 {
@@ -37,7 +66,7 @@ h2 {
   margin-bottom: .633em;
   font-size: 2.369em;
   line-height: 1.27em;
-  color: #4a4a4a;
+  color: #193441;
 }
 
 p {
@@ -47,6 +76,23 @@ p {
 p + p {
   margin: 1.5em 0;
   text-indent: 2em;
+}
+
+blockquote {
+  font-style: italic;
+  position: relative;
+  font-family: 'Domine', Georgia, serif;
+  quotes: "\201C""\201D""\2018""\2019";
+  margin-left: 0;
+}
+
+blockquote:before {
+  content: open-quote;
+  font-size: 3em;
+  left: -1em;
+  top: 0.3em;
+  position: absolute;
+  color: #193441;
 }
 
 .content-wrapper {
